fix: make tooltip always visible for the selected sidebar item

--- a/online-zoo/pages/zoos/css/zoos.css
+++ b/online-zoo/pages/zoos/css/zoos.css
@@ -50,11 +50,30 @@
   justify-content: space-between;
 }
 
+.sidebar__item--active {
+  position: relative;
+  pointer-events: none;
+}
+
 .sidebar__item--active .sidebar__link,
 .sidebar__item--active .sidebar__button {
   border-color: var(--green);
   cursor: default;
   pointer-events: none;
+}
+
+.sidebar__item--active::after,
+.sidebar__item--active::after {
+  content: attr(title);
+  position: absolute;
+  left: 100px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, .9);
+  color: #fff;
+  padding: 15px 10px;
+  border-radius: 5px;
+  opacity: .8;
 }
 
 .sidebar__link,
